@@ -1,4 +1,8 @@
-﻿wersja 9.5.4 - 2021-09-08
+﻿wersja 9.5.5 - 2021-09-09
+- naprawiono problemy z kodowaniem Python 2.7.
+- naprawiono przyciski sterujące.
+
+wersja 9.5.4 - 2021-09-08
 - naprawiono logowanie Polsat GO Box
 - ulepszone gesty dotykowe
 
